--- a/templates/main.erb.html
+++ b/templates/main.erb.html
@@ -21,7 +21,7 @@
 <h1 id="articleTitle">Le blog d'archiloque.net</h1>
 <div id="content">
     <% articles.each do |article| %>
-        <h4 class="blogHomePageArticleTitle"><%= "<a href=\"#{article.dir_name}\">#{article.title}</a>" %></h4>
+        <h4 class="blogHomePageArticleTitle"><%= "<a href=\"#{article.dir_name}/\">#{article.title}</a>" %></h4>
         <div class="blogHomePageArticleSubtitle">par <%= article.author %> le <%= article.date %>
         <div class="blogHomePageArticleDescription"><%= article.description %>
     </div>
