--- a/templates/main.erb.html
+++ b/templates/main.erb.html
@@ -7,13 +7,23 @@
     <link type="text/css" rel="stylesheet" href="blog.css">
 
     <meta property="og:type" content="article"/>
+    <meta name="twitter:card" content="summary" />
+
     <meta property="og:site_name" content="archiloque.net"/>
+
     <meta property="og:title" content="Le blog"/>
+    <meta property="twitter:title" content="Le blog"/>
+
     <meta property="og:description" content="Le blog d'archiloque.net"/>
+    <meta property="twitter:description" content="Le blog d'archiloque.net"/>
+
+    <meta property="twitter:site" content="@archiloque"/>
     <meta property="article:author" content="https://www.facebook.com/archiloque"/>
+
     <meta property="og:locale" content="fr_FR"/>
     <meta property="og:url" content="<%= blog_root_url %>"/>
     <meta property="og:image" content="http://archiloque.net/logo.png" />
+    <meta property="twitter:image" content="http://archiloque.net/logo.png" />
     <meta property="og:type" content="article"/>
 
 </head>
