--- a/templates/article.erb.html
+++ b/templates/article.erb.html
@@ -4,8 +4,10 @@
     <title>[archiloque.net] <%= article_title %></title>
     <meta name="viewport" content="width=850">
     <meta charset="utf-8">
+    <meta name="robots" CONTENT="all">
     <link type="text/css" rel="stylesheet" href="../blog.css">
 
+    <meta name="author" content="<%= author.name %>">
     <meta property="og:type" content="article"/>
     <meta name="twitter:card" content="summary" />
 
@@ -15,24 +17,25 @@
     <meta property="twitter:title" content="<%= article_title %>"/>
 
     <% if article_description %>
+    <meta name="description" content="<%= article_description %>"/>
     <meta property="og:description" content="<%= article_description %>"/>
     <meta property="twitter:description" content="<%= article_description %>"/>
     <% end %>
 
-    <% if author_fb_url %>
-    <meta property="article:author" content="<%= author_fb_url %>"/>
+    <% if author.fb_url %>
+    <meta property="article:author" content="<%= author.fb_url %>"/>
     <% end %>
 
-    <% if author_twitter_url %>
-    <meta property="twitter:site" content="<%= author_twitter_url %>"/>
+    <% if author.twitter_handle %>
+    <meta property="twitter:site" content="<%= author.twitter_handle %>"/>
     <% end %>
 
     <meta property="og:locale" content="fr_FR"/>
     <meta property="og:url" content="<%= article_root_url %>"/>
 
     <% if article_image %>
-    <meta property="og:image" content="<%= " #{article_root_url}#{article_image}" %>" />
-    <meta property="twitter:image" content="<%= " #{article_root_url}#{article_image}" %>" />
+    <meta property="og:image" content="<%= "#{article_root_url}#{article_image}" %>" />
+    <meta property="twitter:image" content="<%= "#{article_root_url}#{article_image}" %>" />
     <% end %>
 
 </head>
@@ -42,13 +45,14 @@
 </nav>
 <h1 id="articleTitle"><%= article_title %></h1>
 <div id="content">
-    <div id="subtitle">par <%= author_url ? "<a href=\"#{author_url}\">#{article_author}</a>" : article_author %> le <%=
+    <article>
+    <div id="subtitle">par <%= author.main_url ? "<a href=\"#{author.main_url}\">#{author.name}</a>" : author.name %> le <%=
         article_date %>
     </div>
     <%= article_content %>
-
+    </article>
     <div id="noComment">
-        Ce site ne gère pas les commentaire, mais vous pouvez directement contacter les auteurs.
+        Ce site ne gère pas les commentaires, mais vous pouvez directement contacter les auteurs.
     </div>
 </div>
 </body>
