--- a/templates/article.erb.html
+++ b/templates/article.erb.html
@@ -6,6 +6,8 @@
     <meta charset="utf-8">
     <meta name="robots" CONTENT="all">
     <link type="text/css" rel="stylesheet" href="../blog.css">
+    <link rel="alternate" type="application/atom+xml" title="Le blog d'archiloque.net" href="<%= blog_root_url %>atom.xml" />
+    <link rel="shortcut icon" href="/favicon.ico" />
 
     <meta name="author" content="<%= author.name %>">
     <meta property="og:type" content="article"/>
