Meilleur phrase pour les commentaires

--- a/templates/article.erb.html
+++ b/templates/article.erb.html
@@ -54,7 +54,7 @@
     <%= article_content %>
     </article>
     <div id="noComment">
-        Ce site ne gère pas les commentaires, mais vous pouvez directement contacter les auteurs.
+        Pour commenter un article vous pouvez directement contacter les auteurs en cliquant sur leur nom.
     </div>
 </div>
 </body>
