--- a/templates/main.erb.html
+++ b/templates/main.erb.html
@@ -42,7 +42,7 @@
     <% end %>
 
     <div id="noComment">
-        Ce site ne gère pas les commentaires, mais vous pouvez directement contacter les auteurs.
+        Pour commenter un article vous pouvez directement contacter les auteurs en cliquant sur leur nom.
     </div>
 
 </div>
