--- a/templates/article.erb.html
+++ b/templates/article.erb.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="<%= lang %>">
 <head>
     <title>[archiloque.net] <%= article_escaped_title %></title>
     <meta name="viewport" content="width=850">
