--- a/static/blog.css
+++ b/static/blog.css
@@ -18,11 +18,16 @@ a:hover {
     text-decoration: none;
 }
 
+pre {
+    font-family: "Lucida Console", Consolas, Monaco, monospace;
+    font-size: 20px;
+}
+
 #articleTitle {
     font-size: 48px;
-    line-height: 54px;
+    line-height: 60px;
     margin-top: 5px;
-    margin-bottom: 5px;
+    margin-bottom: 20px;
     text-align: center;
 }
 #subtitle {
