--- a/static/blog.css
+++ b/static/blog.css
@@ -6,6 +6,10 @@ body {
     line-height: 30px;
 }
 
+h1, h2, h3, h4, h5 {
+  line-height: 120%;
+}
+
 nav {
     text-align: right;
 }
@@ -22,26 +26,6 @@ pre {
     font-family: "Lucida Console", Consolas, Monaco, monospace;
     font-size: 14px;
     line-height: 16px;
-}
-
-#articleTitle {
-    font-size: 48px;
-    line-height: 60px;
-    margin-top: 5px;
-    margin-bottom: 20px;
-    text-align: center;
-}
-#subtitle {
-    padding-bottom: 20px;
-}
-
-#content {
-    margin-left: auto;
-    margin-right: auto;
-}
-
-#content {
-    width: 800px;
 }
 
 .imageblock {
@@ -113,4 +97,29 @@ blockquote:before {
     position: absolute;
     left: -30px;
     top: 20px;
+}
+
+p {
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+#articleTitle {
+    font-size: 48px;
+    line-height: 60px;
+    margin-top: 5px;
+    margin-bottom: 20px;
+    text-align: center;
+}
+#subtitle {
+    padding-bottom: 20px;
+}
+
+#content {
+    margin-left: auto;
+    margin-right: auto;
+}
+
+#content {
+    width: 800px;
 }
