--- a/static/blog.css
+++ b/static/blog.css
@@ -34,6 +34,7 @@ pre {
 
 .imageblock img {
     max-width: 700px;
+    height: auto;
     border: 5px rgba(255, 255, 255, 0.90) solid;
     border-radius: 5px;
 }
