--- a/templates/main.erb.html
+++ b/templates/main.erb.html
@@ -26,10 +26,9 @@
 
     <meta property="og:locale" content="fr_FR"/>
     <meta property="og:url" content="<%= blog_root_url %>"/>
-    <meta property="og:image" content="http://archiloque.net/logo.png" />
-    <meta property="twitter:image" content="http://archiloque.net/logo.png" />
+    <meta property="og:image" content="<%= site_logo_url %>" />
+    <meta property="twitter:image" content="<%= site_logo_url %>" />
     <meta property="og:type" content="article"/>
-
 </head>
 <body>
 <h1 id="articleTitle">Le blog d'archiloque.net</h1>
