--- a/templates/article.amp.erb.html
+++ b/templates/article.amp.erb.html
@@ -2,18 +2,18 @@
 <html ⚡ lang="<%= lang %>">
 <head>
     <meta charset="utf-8">
-    <title>[archiloque.net] <%= article_escaped_title %></title>
+    <title>[archiloque.net] <%= Nokogiri::HTML(article.title).text %></title>
     <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
     <script type="application/ld+json">
       {
         "@context": "http://schema.org",
         "@type": "NewsArticle",
         "mainEntityOfPage": "http://cdn.ampproject.org/article-metadata.html",
-        "headline": "[archiloque.net] <%= article_escaped_title %>",
-        "datePublished": "<%= article_published %>",
-        "dateUpdated": "<%= article_updated %>",
-        <% if article_description %>
-        "description": "<%= article_description %>",
+        "headline": "[archiloque.net] <%= Nokogiri::HTML(article.title).text %>",
+        "datePublished": "<%= article_published.xmlschema %>",
+        "dateUpdated": "<%= article_updated.xmlschema %>",
+        <% if article.description %>
+        "description": "<%= article.description %>",
         <% end %>
         "author": {
           "@type": "Person",
@@ -29,12 +29,12 @@
             "height": <%= site_logo_size[1] %>
           }
         },
-        <% if article_image %>
+        <% if article.image %>
         "image": [
           "@type": "ImageObject",
-          "url": "<%= "#{article_root_url}#{article_image}" %>",
-          "height": "<%= article_image_size[1] %>",
-          "width": "<%= article_image_size[0] %>",
+          "url": "<%= "#{article.absolute_url}#{article.image}" %>",
+          "height": "<%= article.image_size[1] %>",
+          "width": "<%= article.image_size[0] %>",
         ]
         <% end %>
       }
@@ -43,8 +43,7 @@
     <meta name="robots" CONTENT="all">
     <link rel="alternate" type="application/atom+xml" title="Le blog d'archiloque.net" href="<%= blog_root_url %>atom.xml" />
     <link rel="shortcut icon" href="/favicon.ico" />
-    <link rel="canonical" href="<%= "#{article_root_url}#{article_dir_name}" %>" />
-
+    <link rel="canonical" href="<%= article.absolute_url %>" />
 
     <meta name="author" content="<%= authors.collect{|a| a.name}.join(', ') %>">
     <meta property="og:type" content="article"/>
@@ -52,13 +51,13 @@
 
     <meta property="og:site_name" content="archiloque.net"/>
 
-    <meta property="og:title" content="<%= article_escaped_title %>"/>
-    <meta property="twitter:title" content="<%= article_escaped_title %>"/>
+    <meta property="og:title" content="<%= Nokogiri::HTML(article.title).text %>"/>
+    <meta property="twitter:title" content="<%= Nokogiri::HTML(article.title).text %>"/>
 
-    <% if article_description %>
-    <meta name="description" content="<%= article_description %>"/>
-    <meta property="og:description" content="<%= article_description %>"/>
-    <meta property="twitter:description" content="<%= article_description %>"/>
+    <% if article.description %>
+    <meta name="description" content="<%= article.description %>"/>
+    <meta property="og:description" content="<%= article.description %>"/>
+    <meta property="twitter:description" content="<%= article.description %>"/>
     <% end %>
 
     <% if authors.first.fb_url %>
@@ -70,21 +69,18 @@
     <% end %>
 
     <meta property="og:locale" content="fr_FR"/>
-    <meta property="og:url" content="<%= article_root_url %>"/>
+    <meta property="og:url" content="<%= article.absolute_url %>"/>
 
-    <% if article_image %>
-    <meta property="og:image" content="<%= "#{article_root_url}#{article_image}" %>" />
-    <meta property="twitter:image" content="<%= "#{article_root_url}#{article_image}" %>" />
+    <% if article.image %>
+    <meta property="og:image" content="<%= "#{article.absolute_url}#{article.image}" %>" />
+    <meta property="twitter:image" content="<%= "#{article.absolute_url}#{article.image}" %>" />
     <% end %>
 
     <style amp-boilerplate>body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style><noscript><style amp-boilerplate>body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}</style></noscript>
     <script async src="https://cdn.ampproject.org/v0.js"></script>
 </head>
 <body>
-<nav>
-    <a href="<%= blog_root_url%>">Le blog d'archiloque.net</a>
-</nav>
-<h1 id="articleTitle"><%= article_title %></h1>
+<h1 id="articleTitle"><%= article.title %></h1>
 <div id="content">
     <article>
         <div id="subtitle"><%= (lang == 'en') ? 'by' : 'par' %> <%= authors.collect{|author| author.main_url ? "<a href=\"#{author.main_url}\">#{author.name}</a>" : author.name }.join(', ') %>, <%=
