--- a/static/blog.css
+++ b/static/blog.css
@@ -100,6 +100,10 @@ blockquote:before {
     top: 20px;
 }
 
+.attribution {
+    text-align: right;
+}
+
 p {
     margin-top: 10px;
     margin-bottom: 10px;
