--- a/templates/article.erb.html
+++ b/templates/article.erb.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=850">
     <meta name="robots" CONTENT="all">
     <link type="text/css" rel="stylesheet" href="../blog.css">
-    <link rel="alternate" type="application/atom+xml" title="Le blog d'archiloque.net" href="<%= blog_root_url %>atom.xml" />
+    <link rel="alternate" type="application/atom+xml" title="<%= blog_name %>" href="<%= blog_root_url %>atom.xml" />
     <link rel="shortcut icon" href="/favicon.ico" />
     <link rel="canonical" href="<%= article.absolute_url %>" />
     <link rel="amphtml" href="<%= article.absolute_url %>index.amp.html">
@@ -85,14 +85,16 @@
 </head>
 <body>
 <nav id="navTop">
-    <a href="<%= blog_root_url%>">Le blog d'archiloque.net</a>
+    <a href="<%= blog_root_url %>"><%= blog_name %></a>
 </nav>
 <h1 id="articleTitle"><%= article.title %></h1>
 <div id="content">
     <article>
-    <div id="subtitle"><%= (lang == 'en') ? 'by' : 'par' %> <%= authors.collect{|author| author.main_url ? "<a href=\"#{author.main_url}\">#{author.name}</a>" : author.name }.join(', ') %>, <%=
-        article_date %>
-    </div>
+    <% if display_article_info %>
+      <div id="subtitle"><%= (lang == 'fr') ? 'par' : 'by' %> <%= authors.collect{|author| author.main_url ? "<a href=\"#{author.main_url}\">#{author.name}</a>" : author.name }.join(', ') %>, <%=
+          article_date %>
+      </div>
+    <% end %>
     <%= article_content %>
     </article>
     <nav id="navBottom">
