--- a/static/blog.css
+++ b/static/blog.css
@@ -10,6 +10,11 @@ h1, h2, h3, h4, h5 {
   line-height: 120%;
 }
 
+h5 {
+  font-size: 18px;
+  font-weight: bold;  
+}
+
 #navTop {
     text-align: right;
 }
