--- a/templates/article.amp.erb.html
+++ b/templates/article.amp.erb.html
@@ -95,5 +95,15 @@
         <%= amp_content %>
     </article>
 </div>
+
+<nav id="footer">
+  <ul>
+    <li><a href="http://archiloque.net">Homepage</a></li>
+    <li><a href="http://archiloque.net/archiloque/blog">Blog</a></li>
+    <li><a href="http://archiloque.net/archiloque/weekly">Weekly</a></li>
+    <li><a href="http://twitter.com/archiloque">Twitter</a></li>
+  </ul>
+</nav>
+
 </body>
 </html>
