--- a/templates/main.erb.html
+++ b/templates/main.erb.html
@@ -73,5 +73,15 @@
         <div class="blogHomePageArticleDescription"><%= article.description %></div>
     <% end %>
 </div>
+
+<nav id="footer">
+  <ul>
+    <li><a href="http://archiloque.net">Homepage</a></li>
+    <li><a href="http://archiloque.net/blog">Blog</a></li>
+    <li><a href="http://archiloque.net/weekly">Weekly</a></li>
+    <li><a href="http://twitter.com/archiloque">Twitter</a></li>
+  </ul>
+</nav>
+
 </body>
 </html>
