--- a/templates/article.erb.html
+++ b/templates/article.erb.html
@@ -110,8 +110,8 @@
 <nav id="footer">
   <ul>
     <li><a href="http://archiloque.net">Homepage</a></li>
-    <li><a href="http://archiloque.net/archiloque/blog">Blog</a></li>
-    <li><a href="http://archiloque.net/archiloque/weekly">Weekly</a></li>
+    <li><a href="http://archiloque.net/blog">Blog</a></li>
+    <li><a href="http://archiloque.net/weekly">Weekly</a></li>
     <li><a href="http://twitter.com/archiloque">Twitter</a></li>
   </ul>
 </nav>
