--- a/static/blog.css
+++ b/static/blog.css
@@ -144,7 +144,9 @@ p {
     line-height: 60px;
     margin-top: 5px;
     margin-bottom: 20px;
-    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 950px;
 }
 
 #subtitle {
