--- a/static/blog.css
+++ b/static/blog.css
@@ -65,18 +65,6 @@ tr {
     border: 1px white solid;
 }
 
-th:first-child {
-    border-radius: 6px 0 0 0;
-}
-
-th:last-child {
-    border-radius: 0 6px 0 0;
-}
-
-th:only-child {
-    border-radius: 6px 6px 0 0;
-}
-
 th,
 td {
     padding: 2px 5px;
@@ -84,6 +72,25 @@ td {
 
 p.tableblock {
     margin: 0;
+}
+
+th.halign-left,td.halign-left{
+    text-align:left
+}
+th.halign-right,td.halign-right{
+    text-align:right
+}
+th.halign-center,td.halign-center{
+    text-align:center
+}
+th.valign-top,td.valign-top{
+    vertical-align:top
+}
+th.valign-bottom,td.valign-bottom{
+    vertical-align:bottom
+}
+th.valign-middle,td.valign-middle{
+    vertical-align:middle
 }
 
 nav {
