--- a/templates/main.erb.html
+++ b/templates/main.erb.html
@@ -50,9 +50,9 @@
                 "name": "<%= author.name %>",
                 "logo": {
                     "@type": "ImageObject",
-                    "url": "<%= amp_site_logo_url %>",
-                    "width": <%= amp_site_logo_size[0] %>,
-                    "height": <%= amp_site_logo_size[1] %>
+                    "url": "<%= site_logo_url %>",
+                    "width": <%= site_logo_size[0] %>,
+                    "height": <%= site_logo_size[1] %>
                 }
             },
             "image": {
