--- a/templates/article.erb.html
+++ b/templates/article.erb.html
@@ -110,7 +110,7 @@
     <li><a href="http://archiloque.net">Homepage</a></li>
     <li><a href="http://archiloque.net/blog">Blog</a></li>
     <li><a href="http://archiloque.net/weekly">Weekly</a></li>
-    <li><a href="http://twitter.com/archiloque">Twitter</a></li>
+    <li><a href="https://twitter.com/archiloque">Twitter</a></li>
   </ul>
 </nav>
 
