--- a/templates/article.erb.html
+++ b/templates/article.erb.html
@@ -107,9 +107,9 @@
 
 <nav id="footer">
   <ul>
-    <li><a href="http://archiloque.net">Homepage</a></li>
-    <li><a href="http://archiloque.net/blog">Blog</a></li>
-    <li><a href="http://archiloque.net/weekly">Weekly</a></li>
+    <li><a href="https://archiloque.net">Homepage</a></li>
+    <li><a href="https://archiloque.net/blog">Blog</a></li>
+    <li><a href="https://archiloque.net/weekly">Weekly</a></li>
     <li><a href="https://twitter.com/archiloque">Twitter</a></li>
   </ul>
 </nav>
